	PR rtl-optimization/33732 	* reload.c (push_reload): Check that the REG_DEAD note was referring 	to a hardreg or to a pseudo that has been assigned exactly one hardreg 	before considering it in order to select the reload register. 	(combine_reloads): Likewise. 	(find_dummy_reload): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130042 138bc75d-0d04-0410-961f-82ee72b054a4